Reworked the options system:
    - an APIOptions object inherited at each "spawn" operation, with overrides
    - environment-dependent defaults if nothing supplied
    - "spawn" operations expose top-level aliases for selected settings
    - per-method overrides. For timeouts, `timeout_ms` (formerly called 'max_time_ms' becomes an alias for the appropriate timeout for that method)
    - collection and database's `info` method gets timeout parameters
    - (not user-facing) classes in the hierarchy other than DataAPIClient have breaking changes in their constructor (now options-first and keyword-arg-only)
    - introduced `serdes_options.custom_datatypes_in_reading`, also controlling datetime management in Collections
    - introduced `serdes_options.binary_encode_vectors`, affecting read/write wire format for collections
    - introduced `serdes_options.unroll_iterables_to_lists` to make the write path tolerant w.r.t. lazy iterables, numpy etc in writing vectors/lists
    - token and embedding API key coercion into `*Provider` happens at the Options' init layer
Major restructuring of the codebase into directories
    - some imports (supposedly not used externally) changed slightly
    - adapted and limited scope of test_imports.py
Removed AstraDBDatabaseAdmin's `from_api_endpoint` static method (reason: unused)
Rename main branch from 'master' ==> `main`
Removal of several deprecated modules/features from previous versions:
    - 'core' (i.e. pre-1.0) library
    - 'collection.bulk_write' and the associated result and exception classes
    - 'vector=', 'vectorize=' and 'vectors=' parameters from collection methods
    - 'retrieved' (=> `consumed`) for cursors
    - 'set_caller' method of `DataAPIClient`, `AstraDBAdmin`, `DataAPIDatabaseAdmin`, `AstraDBDatabaseAdmin`, `[Async]Database`, `[Async]Collection`
    - 'caller_name' and 'caller_version' parameters where `callers` is now expected