@@ -132,12 +132,12 @@ OUTPUT_ROW_TO_POSTPROCESS = {
     "p_blob": {"$binary": "YWJjMTIz"},  # b"abc123",
     "p_uuid": "9c5b94b1-35ad-49bb-b118-8e8fc24abf80",
     "p_decimal": decimal.Decimal("123.456"),
-    "p_date": "11111-09-30",
+    "p_date": "+11111-09-30",
     "p_duration": "P1M1DT1M0.000000001S",
     "p_inet": "10.1.1.2",
     "p_time": "12:34:56.78912",
     "p_timestamp": "2015-05-03T13:30:54.234Z",
-    "p_timestamp_out_offset": "-123-04-03T13:13:04.123+1:00",
+    "p_timestamp_out_offset": "-0123-04-03T13:13:04.123+1:00",
     "p_list_int": [99, 100, 101],
     "p_list_double": [1.1, 2.2, "NaN", "Infinity", "-Infinity", 9.9],
     "p_set_ascii": ["a", "b", "c"],
@@ -162,13 +162,13 @@ EXPECTED_POSTPROCESSED_ROW = {
     "p_blob": b"abc123",
     "p_uuid": UUID("9c5b94b1-35ad-49bb-b118-8e8fc24abf80"),
     "p_decimal": decimal.Decimal("123.456"),
-    "p_date": DataAPIDate.from_string("11111-09-30"),
+    "p_date": DataAPIDate.from_string("+11111-09-30"),
     "p_duration": DataAPIDuration(signum=+1, months=1, days=1, nanoseconds=60000000001),
     "p_inet": ipaddress.ip_address("10.1.1.2"),
     "p_time": DataAPITime(12, 34, 56, 789120000),
     "p_timestamp": DataAPITimestamp.from_string("2015-05-03T13:30:54.234Z"),
     "p_timestamp_out_offset": DataAPITimestamp.from_string(
-        "-123-04-03T13:13:04.123+1:00"
+        "-0123-04-03T13:13:04.123+1:00"
     ),
     "p_list_int": [99, 100, 101],
     "p_list_double": [
@@ -334,7 +334,7 @@ EXPECTED_PREPROCESSED_ROW = {
     "float_pinf": "Infinity",
     "float_minf": "-Infinity",
     "bytes": {"$binary": "zczMPXsAAAA="},
-    "DataAPITimestamp": "-103-06-17T07:25:03.890Z",
+    "DataAPITimestamp": "-0103-06-17T07:25:03.890Z",
     "DataAPIDate": "1724-04-22",
     "DataAPITime": "04:05:06.789",
     "d.datetime": "1724-04-22T04:05:06.789000+00:00",
